Database location configuration change

--- a/badminton.cfg
+++ b/badminton.cfg
@@ -7,4 +7,4 @@ APP_NAME = os.environ.get('OPENSHIFT_APP_NAME','flask')
 IP = os.environ.get('OPENSHIFT_PYTHON_IP','0.0.0.0')
 PORT = int(os.environ.get('OPENSHIFT_PYTHON_PORT',8080))
 BASE_DIR = os.path.join(os.environ.get('OPENSHIFT_REPO_DIR','.'))
-SQLALCHEMY_DATABASE_URI = 'sqlite:///' + os.path.join(BASE_DIR, 'db/badminton.sqlite')
+SQLALCHEMY_DATABASE_URI = 'sqlite:///' + '/data/db/badminton.sqlite'
